# contriwork-notifications

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TEMPLATE_USAGE.md  VERSION_MATRIX.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  security.yml
.github/workflows/: ci.yml  release-dotnet.yml  release-gate.yml  release-npm.yml  release-python.yml  security-scan.yml
contract-tests/: test_cases.json
csharp/: Contriwork.Notifications.sln  Contriwork.PackageName.sln  Directory.Build.props  Dockerfile  README.md
csharp/src/Contriwork.Notifications/: Contriwork.Notifications.csproj  ErrorCode.cs  IAdapter.cs  INotificationPort.cs  INotificationsPort.cs  NotificationClient.cs  NotificationConfig.cs  Payload.cs  SendResult.cs  ServiceCollectionExtensions.cs  Severity.cs
csharp/src/Contriwork.Notifications/Adapters/: DiscordWebhookAdapter.cs  InMemoryAdapter.cs  PushoverAdapter.cs  (+3 more)
csharp/src/Contriwork.PackageName/: Contriwork.PackageName.csproj  IPackageNamePort.cs
csharp/tests/Contriwork.Notifications.Tests/: ContractTests.cs  Contriwork.Notifications.Tests.csproj  DiscordTests.cs  PushoverTests.cs  SlackTests.cs  SmokeTests.cs  SmtpTests.cs  TelegramTests.cs
csharp/tests/Contriwork.PackageName.Tests/: ContractTests.cs  Contriwork.PackageName.Tests.csproj  SmokeTests.cs
docs/: RELEASE.md  SCOPE.md
python/: Dockerfile  README.md  pyproject.toml
python/src/contriwork_PACKAGE_NAME/: __init__.py  port.py
python/src/contriwork_notifications/: __init__.py  _quiet_hours.py  _rate_limit.py  adapter.py  client.py  config.py  errors.py  payload.py  port.py  result.py  severity.py
python/src/contriwork_notifications/adapters/: __init__.py  discord.py  memory.py  pushover.py  slack.py  smtp.py  telegram.py
python/src/contriwork_notifications/macos/: __init__.py  imessage.py
python/tests/: test_contract.py  test_discord.py  test_imessage.py  test_pushover.py  test_slack.py  test_smoke.py  test_smtp.py  test_telegram.py
scripts/: release.sh
typescript/: .npmrc  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/scripts/: copy-types-cjs.mjs
typescript/src/: adapter.ts  client.ts  config.ts  errors.ts  index.ts  payload.ts  port.ts  result.ts  severity.ts  strategy.md
typescript/src/adapters/: discord.ts  index.ts  memory.ts  pushover.ts  slack.ts  smtp.ts  telegram.ts
typescript/src/internal/: quiet-hours.ts  rate-limit.ts
typescript/tests/: contract.test.ts  discord.test.ts  pushover.test.ts  slack.test.ts  smoke.test.ts  smtp.test.ts  telegram.test.ts
(+3 files in other folders)
