[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "contriwork-PACKAGE_NAME"
description = "TODO: one-line description of the package."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "ContriWork", email = "maintainers@contriwork.dev" }
]
keywords = ["contriwork"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/contriwork/contriwork-PACKAGE_NAME"
Repository = "https://github.com/contriwork/contriwork-PACKAGE_NAME"
Issues = "https://github.com/contriwork/contriwork-PACKAGE_NAME/issues"
Changelog = "https://github.com/contriwork/contriwork-PACKAGE_NAME/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "pip-audit>=2.7",
]

[tool.hatch.version]
path = "../VERSION"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)"

[tool.hatch.build.targets.wheel]
packages = ["src/contriwork_PACKAGE_NAME"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle + pyflakes
  "I",                  # isort
  "B",                  # bugbear
  "UP",                 # pyupgrade
  "S",                  # bandit-equivalent security checks
  "N",                  # pep8-naming
  "RUF",                # ruff-specific
  "ASYNC",              # async issues
  "SIM",                # simplify
]
ignore = ["S101"]       # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]
# Placeholder module path contains uppercase `PACKAGE_NAME`; consumers of the
# template replace this with a lowercase identifier (TEMPLATE_USAGE.md §2),
# at which point the path stops matching this glob and N999 applies normally.
"src/contriwork_PACKAGE_NAME/**/*.py" = ["N999"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["contriwork_PACKAGE_NAME"]
mypy_path = "src"
warn_unreachable = true
warn_return_any = true
disallow_any_explicit = false
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "contract: cross-language contract tests driven by contract-tests/test_cases.json",
]
